--- a/src/sass/card.scss
+++ b/src/sass/card.scss
@@ -8,13 +8,13 @@
 .card-container{
 	display: flex;
 	justify-content: space-between;
+	margin: 0 auto;
+	
 	@media (max-width:846px){
 		flex-wrap: wrap;
 		padding: 0 20px;
 		justify-content: space-evenly;
-		&:nth-child(1), &:nth-child(2){
-			margin-bottom: 50px;
-		}
+		
 	}
 	@media (max-width:600px){
 		flex-wrap: wrap;
@@ -26,15 +26,18 @@
 		}
 	}
 	
-	&:last-child{
-		margin-right: 0;
-	}
+	
 }
+
+
 &-item {
 	margin-right: 30px;
 	max-width: 270px;
 	@media (max-width:846px){
 		margin-right:0;
+		&:nth-child(1), &:nth-child(2){
+			margin-bottom: 50px;
+		}
 	}
 	@media (max-width:600px){
 		margin:0 auto 50px;
@@ -49,9 +52,7 @@
 		img{
 			width: 100%;
 			height: 100%;
-			top: 0;
-			left: 0;
-			
+						
 		}
 	}
 	&-name {margin-bottom: 5px;
@@ -127,5 +128,6 @@
 	}
 }
 
-
+&-item-last{
+	margin-right: 0;}
 }
