--- a/src/sass/testimonials.scss
+++ b/src/sass/testimonials.scss
@@ -3,7 +3,13 @@
 	display: flex;
 	justify-content: center;
 	margin-bottom: 160px;
+	@media (max-width:1169px){
+		max-height:330px ;
+		margin-bottom: 77px;
+	}
+	
 	&-img{width: 50vw;
+		
 		img{
 			width: 100%;
 			height: 100%;
@@ -16,6 +22,7 @@
 		width: 50%;		
 		display: flex;
 		justify-content: center;
+		
 		.testimonials-wrapper{
 			margin: auto;
 		}	
@@ -23,8 +30,12 @@
 			&-text{
 			
 				max-width: 470px;
-				margin-bottom: 30px;
+				margin-bottom: 28px;
 				text-align: left;
+				@media (max-width:1169px){
+					max-width: 330px;
+					margin-bottom: 16px;
+				}
 			
 				p{
 					font-family: 'Cardo';
@@ -34,6 +45,11 @@
 					line-height: 49px;
 					text-transform: capitalize;				
 					color: #FFFFFF;
+					@media (max-width:1169px)
+					{
+						font-size: 24px;
+						line-height: 32px;
+					}
 					
 				}
 			}
@@ -46,7 +62,12 @@
 					font-size: 13px;
 					line-height: 15px;
 					text-transform: uppercase;				
-					color: #FFFFFF;				
+					color: #FFFFFF;
+					@media (max-width:1169px)
+					{		
+						font-size: 12px;
+						line-height: 14px;		
+					}
 				}
 			}
 		
