--- a/src/sass/testimonials.scss
+++ b/src/sass/testimonials.scss
@@ -1,19 +1,42 @@
 .testimonials{
-	max-height:490px ;
 	display: flex;
-	justify-content: center;
+	
 	margin-bottom: 160px;
 	@media (max-width:1169px){
-		max-height:330px ;
+		
 		margin-bottom: 77px;
 	}
+	@media (max-width:770px){
+		flex-direction: column;
+	}
 	
-	&-img{width: 50vw;
+	&-img{
+		
+		width: 50%;
+		overflow: hidden;
+		position: relative;
+		@media (max-width:770px) {
+			width: 100%;
+			
+			
+		}
 		
 		img{
+			
+			position: absolute;
 			width: 100%;
 			height: 100%;
 			object-fit: cover;
+			object-position: center;
+			
+			@media (max-width:770px){
+				position: relative;
+				
+				object-fit: contain;
+				
+				
+
+			}
 
 		}
 	}
@@ -22,6 +45,14 @@
 		width: 50%;		
 		display: flex;
 		justify-content: center;
+		padding: 116px 0;
+		@media (max-width:1169px){
+			padding: 47px 0 110px;
+		}
+		@media (max-width:770px){
+			width: 100%;
+			padding: 30px 25px 95px 20px;
+		}
 		
 		.testimonials-wrapper{
 			margin: auto;
