--- a/src/sass/download.scss
+++ b/src/sass/download.scss
@@ -1,6 +1,11 @@
-
+.container-download{
+	@media (max-width:570px){
+		padding: 0 20px;
+		max-width: 320px;
+	}
+}
 .download-title{
-	margin-bottom: 15px;
+	margin-bottom: 25px;
 	p{
 		font-family: 'Raleway';
 		font-style: normal;
@@ -9,6 +14,15 @@
 		line-height: 35px;
 		text-align: center;			
 		color: #000000;
+		@media (max-width:1169px){
+			font-size: 24px;
+			line-height: 28px;
+			font-size: 14px;
+			line-height: 16px;
+		}
+		@media (max-width:570px){
+		font-size: 18px;
+		line-height: 21px;}
 	}
 
 }
@@ -22,6 +36,14 @@
 		text-align: center;
 		text-transform: uppercase;			
 		color: #000000;
+		@media (max-width:1169px){
+			font-size: 14px;
+			line-height: 16px;
+		}
+		@media (max-width:570px){
+			font-size: 13px;
+			line-height: 15px;
+		}
 	}
 }
 .download-button {
@@ -41,14 +63,12 @@
 				box-shadow: 4px 4px 30px #FF4343;
 				transition: 0.2s;
 			}
-			@media (max-width:1024px){
-				width: 314px;
-				height: 78px;
-			}
+			
 			@media (max-width:570px){
 				width: 280px;
-				height: 58px;
+				height: 78px;
 				padding: 16px 0;
+				margin: 13px auto 45px;
 			}
 
 		p{		
