--- a/src/sass/footer.scss
+++ b/src/sass/footer.scss
@@ -1,6 +1,16 @@
 .footer{
 	background-color: rgba(44, 49, 84, 1);
 	padding: 24px 0;
+	@media (max-width:1024px){
+		padding: 14px 0;
+	}
+	@media (max-width:600px){
+		padding: 29px 0;
+		.container-footer{
+			max-width: 320px;
+			padding: 0 20px;
+		}
+	}
 	p{
 		margin: 0 auto;
 		max-width: 370px;
@@ -12,6 +22,11 @@
 		text-align: center;
 		text-transform: capitalize;
 		color: #808080;
+		@media (max-width:1024px){
+			font-size: 14px;
+			line-height: 16px;
+			max-width: 314px;;
+		}
 		a {
 			color: #fff;
 		}
