--- a/src/sass/card.scss
+++ b/src/sass/card.scss
@@ -106,6 +106,8 @@
 	&-icon {
 		a{
 			margin-right: 5px;
+			
+
 		}
 		i{
 			
@@ -115,6 +117,9 @@
 			padding: 10px;
 			border: 1px solid #C6CBCD;
 			font-size: 18px;
+			&:hover{
+				transform: scale(1.2);
+			}
 			@media (max-width:1169px){
 				font-size: 15px;
 				height:32px;
@@ -124,7 +129,17 @@
 			}
 
 		}
-		
+		.fa-facebook-f:hover{
+			color: rgb(14, 43, 122);
+			background-color: rgba(121, 129, 140, 0.2);
+		}
+		.fa-twitter:hover{
+			color: rgb(46, 114, 201);
+			background-color: rgba(121, 129, 140, 0.2);
+		}
+		.fa-linkedin-in:hover{
+			background-color: rgb(73, 123, 188);
+		}
 	}
 }
 
