--- a/src/sass/gallery.scss
+++ b/src/sass/gallery.scss
@@ -1,1 +1,64 @@
-.gallery{display: none;}
+.gallery{
+	margin-bottom: 114px;
+	display: flex;
+	flex-wrap: wrap;
+	&-item{
+		
+		width: 25%;
+		height: 25vw;
+		position: relative;
+		border: 1px solid #fff;
+
+		&_img{
+			height: 100%;
+			overflow: hidden;
+			img{
+				height: 100%;
+				width: 100%;
+				object-fit: cover;
+
+			}
+		}
+		
+		&:hover{
+			::after{
+				content: "";
+				display: block;
+				background-color: rgba(255, 67, 67, 0.8);
+				position: absolute;
+				width: 100%;
+				height: 100%;
+				top: 0;
+				left: 0;
+				z-index: 3;
+				
+			}
+			
+		}
+		&_name{margin-bottom: 44px;
+			p{
+				font-family: 'Raleway';
+				font-style: normal;
+				font-weight: 900;
+				font-size: 24px;
+				line-height: 28px;
+				text-align: center;
+				text-transform: uppercase;				
+				color: #FFFFFF;
+
+			}
+		}
+		&_text{
+			p{
+				font-family: 'Raleway';
+				font-style: normal;
+				font-weight: 400;
+				font-size: 18px;
+				line-height: 21px;
+				text-align: center;				
+				color: #FFFFFF;
+
+			}
+		}
+	}
+}
